--- a/index.html
+++ b/index.html
@@ -11,15 +11,24 @@
 
 <body>
     <img src="paper.jpg" alt="Pozadina" id="pozadina">
+    
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="/__/firebase/8.3.2/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="/__/firebase/8.3.2/firebase-analytics.js"></script>
+
+<!-- Initialize Firebase -->
+<script src="/__/firebase/init.js"></script>
 
 
-    <script src="https://www.gstatic.com/firebasejs/8.2.8/firebase-app.js"></script>
+    
 
 
-    <script src="https://www.gstatic.com/firebasejs/8.2.8/firebase-analytics.js"></script>
 
 
-    <script src="https://www.gstatic.com/firebasejs/8.2.8/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.3.2/firebase-database.js"></script>
 
 
     <script>
