--- a/index.html
+++ b/index.html
@@ -166,6 +166,14 @@
         <p>
             <naslov>II Stav lokalne zajednice o razvoju održivog turizma</naslov>
         </p>
+        <p> Upustvo za popunjavanje ankete,<br>
+            unesite brojeve od 1 do 5 <br>
+            1-Uopšte se ne slažem<br>
+            2-uglavnom se ne slažem<br>
+            3-delimično se slažem<br>
+            4-uglavnom se slažem<br>
+            5-u potpunosti se slažem<br>
+
 
 
         <label for="izbor8">Vaša životna sredina treba da bude zaštićena sada i u budućnosti</label><br>
