--- a/index.html
+++ b/index.html
@@ -162,17 +162,19 @@
     <option value="od 40 do 49">od 40 do 49</option>
     <option value="više od 50">više od 50</option>
     </select><br>
-
-        <p>
-            <naslov>II Stav lokalne zajednice o razvoju održivog turizma</naslov>
-        </p>
-        <p> Upustvo za popunjavanje ankete,<br>
+        
+         <p> Upustvo za popunjavanje ankete,<br>
             unesite brojeve od 1 do 5 <br>
             1-Uopšte se ne slažem<br>
             2-uglavnom se ne slažem<br>
             3-delimično se slažem<br>
             4-uglavnom se slažem<br>
-            5-u potpunosti se slažem<br>
+            5-u potpunosti se slažem<br><br></p>
+
+        <p>
+            <naslov>II Stav lokalne zajednice o razvoju održivog turizma</naslov>
+        </p>
+       
 
 
 
