--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             2-uglavnom se ne slažem<br>
             3-delimično se slažem<br>
             4-uglavnom se slažem<br>
-            5-u potpunosti se slažem<br><br></p>
+            5-u potpunosti se slažem</p><br><br>
 
         <p>
             <naslov>II Stav lokalne zajednice o razvoju održivog turizma</naslov>
