--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     <option value="više od 50">više od 50</option>
     </select><br>
         
-         <p> Upustvo za popunjavanje ankete,<br>
+         <p> Upustvo za popunjavanje ankete:<br>
             unesite brojeve od 1 do 5 <br>
             1-Uopšte se ne slažem<br>
             2-uglavnom se ne slažem<br>
