--- a/index.html
+++ b/index.html
@@ -13,26 +13,26 @@
     <img src="paper.jpg" alt="Pozadina" id="pozadina">
 
 
-    <script src="https://www.gstatic.com/firebasejs/8.3.2/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-app.js"></script>
 
 
-    <script src="https://www.gstatic.com/firebasejs/8.3.2/firebase-analytics.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-analytics.js"></script>
 
 
-    <script src="https://www.gstatic.com/firebasejs/8.3.2/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-database.js"></script>
 
 
     <script>
         // Your web app's Firebase configuration
         // For Firebase JS SDK v7.20.0 and later, measurementId is optional
         var firebaseConfig = {
-            apiKey: "AIzaSyAY-UPI0nJoGNMMw1LFEcgOSSz19J1XY9c",
-            authDomain: "anketa-2c2eb.firebaseapp.com",
-            projectId: "anketa-2c2eb",
-            storageBucket: "anketa-2c2eb.appspot.com",
-            messagingSenderId: "921018850551",
-            appId: "1:921018850551:web:de7ac53398df54241647f2",
-            measurementId: "G-9H05X2VPH8"
+    apiKey: "AIzaSyBc8LogwFJvY09TqBtEiS_Znp8sqpAKkeo",
+    authDomain: "anketa2-7554e.firebaseapp.com",
+    projectId: "anketa2-7554e",
+    storageBucket: "anketa2-7554e.appspot.com",
+    messagingSenderId: "703971053213",
+    appId: "1:703971053213:web:c65befe372714e39d88e74",
+    measurementId: "G-756TVRZ560"
         };
 
         function readData() {
