--- a/index.html
+++ b/index.html
@@ -13,21 +13,22 @@
     <img src="paper.jpg" alt="Pozadina" id="pozadina">
 
 
-    <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.5.0/firebase-app.js"></script>
 
 
-    <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-analytics.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.5.0/firebase-analytics.js"></script>
 
 
-    <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.5.0/firebase-database.js"></script>
 
 
     <script>
         // Your web app's Firebase configuration
         // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-        var firebaseConfig = {
+       var firebaseConfig = {
     apiKey: "AIzaSyBc8LogwFJvY09TqBtEiS_Znp8sqpAKkeo",
     authDomain: "anketa2-7554e.firebaseapp.com",
+    databaseURL: "https://anketa2-7554e-default-rtdb.firebaseio.com",
     projectId: "anketa2-7554e",
     storageBucket: "anketa2-7554e.appspot.com",
     messagingSenderId: "703971053213",
