--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
     <main>
 
-        <h1>Statovi lokalnog stanovništva o razvoju ekoturizma i zaštite prirode u Parku prirode Tikvara</h1>
+        <h1>Stavovi lokalnog stanovništva o razvoju ekoturizma i zaštite prirode u Parku prirode Tikvara</h1>
         <br>
         <br><label for="izbor1"><naslov>I Socio-demografkse karakteristike ispitanika:</naslov><br> Pol:</label><br>
         <select name="izbor1" id="izbor1">
