--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
         <h1>Stavovi lokalnog stanovništva o razvoju ekoturizma i zaštite prirode u Parku prirode Tikvara</h1>
         <br>
-        <br><label for="izbor1" id="prviNaslov"><naslov>I Socio-demografkse karakteristike ispitanika:</naslov><br> Pol:</label><br>
+        <br><label for="izbor1" ><naslov id="prviNaslov">I Socio-demografkse karakteristike ispitanika:</naslov><br> Pol:</label><br>
         <select name="izbor1" id="izbor1">
     <option value="muški">Muški</option>
     <option value="ženski">Ženski</option>
